# jaminpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  Makefile.in  README  README.md  aclocal.m4  config.guess  config.h  config.h.in  config.status  config.sub  configure  configure.in  jaminpp.gresource.xml  libtool  vcpkg.json
++patches-missing-files.0/src/: jamin.1.patch
++patches-missing-files.1/examples/: jamin_ui.patch  marble_jamin_ui.patch
++patches-missing-files.1/src/: jamin.1.patch
++patches-missing-files.2/src/: jamin.1.patch
++patches-missing-files.3/src/: jamin.1.patch
,,commit.jamin--debian--0.95.0--patch-9--jordens@debian.org--debian--2004.1120308552.28595.1/jamin--debian--0.95.0--patch-9.patches/: mod-files-index  orig-files-index
,,commit.jamin--debian--0.95.0--patch-9--jordens@debian.org--debian--2004.1120308552.28595.1/jamin--debian--0.95.0--patch-9.patches/patches/debian/: changelog.patch  control.patch
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
cmake/: add_catch_test.cmake  gresource.cmake  module_chk.cmake  xlate.cmake
controller/: Makefile  Makefile.am  Makefile.in
data/: CMakeLists.txt  Makefile  Makefile.in
debian/: README.Debian  changelog  clean  control  control.in  copyright  copyright_hints  menu  rules  watch
debian/patches/: 1003_add_dynamic_linking.patch  1004_install_correct_dir.patch  1005_desktop_file.patch  NEWS.patch  add-potfiles.patch  gcc15.patch  series
examples/: CMakeLists.txt  Makefile  Makefile.in
pixmaps/: Makefile  Makefile.in
po/: CMakeLists.txt  Makefile  Makefile.in  cz.gmo
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  compressor-ui.c  compressor.h  config.h.in  geq.c  gtkmeter.c  gtkmeter.h  gtkmeterscale.h  hdeq.c  hdeq.h  interface.c  intrim.c  io-menu.c  io.c  jam.ui  jamin  jamin-scene.c  jamin.1  jaminpp_resource.h  jamui.cpp  jamui.hpp  limiter-ui.c  limiter.h  main.c  main.cpp  multiout-ui.c  presets-ui.c  process.c  process.h  scenes.c  scenes.h  spectrum.c  state-vars.txt  state.c  state.h  (+2 more)
src/.deps/: jamin-callbacks.Po  jamin-compressor-ui.Po  jamin-geq.Po  jamin-gtkmeter.Po  jamin-gtkmeterscale.Po  jamin-hdeq.Po  jamin-help.Po  jamin-intrim.Po  jamin-io-menu.Po  jamin-io.Po  jamin-limiter-ui.Po  jamin-main.Po  jamin-multiout-ui.Po  jamin-plugin.Po  jamin-preferences.Po  jamin-presets-ui.Po  jamin-process.Po  jamin-resource.Po  jamin-ringbuffer.Po  jamin-rms.Po  jamin-scenes.Po  jamin-spectrum.Po  jamin-spline.Po  jamin-state.Po  jamin-status-ui.Po  jamin-stereo.Po  jamin-support.Po  jamin-transport.Po  libnopt_a-interface.Po
src/jam/lib/: using_gtk.hpp
src/test/: gtest_harness.hpp  gtk_test_app.hpp
